--- a/package.json
+++ b/package.json
@@ -1,34 +1,82 @@
 {
-  "name": "my_portfolio",
-  "version": "1.0.1",
-  "description": "Responsive portfolio website",
-  "main": "src/index.html",
-  "homepage": "https://thewhitewolf1337.github.io/my_portfolio/",
-  "author": "David Karrick",
-  "license": "MIT",
-  "scripts": {
-    "build: sass": "node-sass --output-style compressed -r scss/ -o src/css/",
-    "build: typescript": "tsc",
-    "watch: sass": "onchange 'scss/*.scss' -- run-s build: sass",
-    "watch: typescript": "onchange 'typescript/*.{ts,tsx}' -- run-s build: typescript",
-    "watcher": "run-p watch:*",
-    "sassy": "node-sass -w --output-style compressed  scss/ -o src/css/ --recursive",
-    "saucy": "node-sass -w scss/ -o src/css/ --recursive",
-    "deploy": "gh-pages -d src"
-  },
-  "devDependencies": {
-    "eslint": "^5.15.1",
-    "gh-pages": "^2.0.1",
-    "node-sass": "^4.11.0",
-    "npm-run-all": "^4.1.5",
-    "onchange": "^5.2.0",
-    "typescript": "^3.3.3333"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TheWhiteWolf1337/my_portfolio.git"
-  },
-  "bugs": {
-    "url": "https://github.com/TheWhiteWolf1337/my_portfolio/issues"
-  }
+	"name": "my_portfolio",
+	"version": "1.0.1",
+	"description": "Responsive portfolio website",
+	"main": "src/index.html",
+	"homepage": "https://thewhitewolf1337.github.io/my_portfolio/",
+	"author": "David Karrick",
+	"license": "MIT",
+	"scripts": {
+		"build: sass": "node-sass --output-style compressed -r scss/ -o src/css/",
+		"build: typescript": "tsc",
+		"watch: sass": "onchange 'scss/*.scss' -- run-s build: sass",
+		"watch: typescript": "onchange 'typescript/*.{ts,tsx}' -- run-s build: typescript",
+		"watcher": "run-p watch:*",
+		"sassy": "node-sass -w --output-style compressed  scss/ -o src/css/ --recursive",
+		"saucy": "node-sass -w scss/ -o src/css/ --recursive",
+		"deploy": "gh-pages -d src",
+		"tslint-check": "tslint-config-prettier-check ./tslint.json"
+	},
+	"devDependencies": {
+		"eslint": "^5.15.1",
+		"eslint-config-prettier": "^4.1.0",
+		"gh-pages": "^2.0.1",
+		"node-sass": "^4.11.0",
+		"npm-run-all": "^4.1.5",
+		"onchange": "^5.2.0",
+		"prettier-stylelint": "^0.4.2",
+		"stylelint-config-idiomatic-order": "^6.2.0",
+		"tslint-config-prettier": "^1.18.0",
+		"tslint-microsoft-contrib": "^6.1.0",
+		"typescript": "^3.3.3333"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/TheWhiteWolf1337/my_portfolio.git"
+	},
+	"bugs": {
+		"url": "https://github.com/TheWhiteWolf1337/my_portfolio/issues"
+	},
+	"stylelint": {
+		"extends": [
+			"stylelint-config-idiomatic-order",
+			"./node_modules/prettier-stylelint/config.js"
+		],
+		"rules": {
+			"unit-whitelist": [
+				"rem",
+				"deg",
+				"vh",
+				"em",
+				"px",
+				"fr",
+				"%",
+				"s"
+			],
+			"string-quotes": "single"
+		}
+	},
+	"eslint": {
+		"extends": [
+			"prettier",
+			"prettier/@typescript-eslint"
+		],
+		"plugins": [
+			"prettier"
+		],
+		"rules": {
+			"prettier/prettier": "error"
+		}
+	},
+	"prettier": {
+		"printWidth": 80,
+		"tabWidth": 4,
+		"useTabs": true,
+		"semi": false,
+		"singleQuote": true,
+		"trailingComma": "none",
+		"bracketSpacing": true,
+		"jsxBracketSameLine": false
+	},
+	"dependencies": {}
 }
