--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
 	"scripts": {
 		"build:sass": "node-sass --output-style compressed -r scss/ -o src/css/",
 		"build:typescript": "tsc",
-		"min:init": "cp -r src/* minified/",
+		"min:html": "npm-run-all -p min:html:*",
+		"min:html:index": "minify src/index.html -o minified/index.html",
+		"min:html:about": "minify src/about.html -o minified/about.html",
+		"min:html:contact": "minify src/contact.html -o minified/contact.html",
+		"min:html:work": "minify src/work.html -o minified/work.html",
 		"min:css": "node-sass --output-style compressed -r scss/ -o minified/css/",
-		"min:javascript": "uglifyjs-folder src/javascript -o minified/javascript",
+		"min:js": "minify src/javascript/main.js -o minified/javascript/main.js",
 		"watch:sass": "onchange 'scss/*.scss' -- run-s build: sass",
 		"watch:typescript": "onchange 'typescript/*.{ts,tsx}' -- run-s build: typescript",
 		"watcher": "run-p watch:*",
 		"sassy": "node-sass -w --output-style compressed  scss/ -o src/css/ --recursive",
 		"saucy": "node-sass -w scss/ -o src/css/ --recursive",
-		"minify": "npm-run-all min:init min:css",
+		"minify": "npm-run-all -p min:*",
 		"deploy": "gh-pages -d minified",
 		"tslint-check": "tslint-config-prettier-check ./tslint.json"
 	},
