--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,17 @@
 [[headers]]
+  for = "*.js" # js files should be set this way
+  [headers.values]
+    Cache-Control = "public, max-age=604800"
+[[headers]]
+  for = "*.css" # css files too
+  [headers.values]
+    Cache-Control = "public, max-age=604800"
+[[headers]]
 for = "/*"
 [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    Link = [
-    "</main.css>; rel=preload; as=style",
-    "</main.js>; rel=preload; as=script"
-    ]
+    #X-Frame-Options = "DENY"
+    #X-XSS-Protection = "1; mode=block"
+    #Link = [
+    #"</main.css>; rel=preload; as=style",
+    #"</main.js>; rel=preload; as=script"
+    #]
