--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,10 @@
   [headers.values]
     Cache-Control = "public, max-age=604800"
 [[headers]]
+  for = "*.ttf" # js files should be set this way
+  [headers.values]
+    Cache-Control = "public, max-age=604800"
+[[headers]]
   for = "*.css" # css files too
   [headers.values]
     Cache-Control = "public, max-age=604800"
