--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"git:deploy": "gh-pages -d minified",
 		"netlify:deploy": "netlify deploy",
 		"netlify:postdeploy": "netlify deploy --prod",
+		"update": "gulp && bit u && netlify deploy --prod",
 		"tslint": "tslint -c src/ts/tslint.json src/ts/*.ts",
 		"tslint-check": "tslint-config-prettier-check ./tslint.json"
 	},
