--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"eslint": "^5.15.1",
 		"eslint-config-prettier": "^4.1.0",
 		"events": "^3.0.0",
+		"google-closure-compiler": "^20190301.0.0",
 		"gulp": "^4.0.0",
 		"gulp-connect": "^5.7.0",
 		"gulp-cssnano": "^2.1.3",
@@ -77,7 +78,12 @@
 				"%",
 				"s"
 			],
-			"string-quotes": "single"
+			"string-quotes": [
+				"single",
+				{
+					"message": "Single quotes look better"
+				}
+			]
 		},
 		"ignoreFiles": "./dist/css/main.css"
 	},
